k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app-deployment
  labels:
    app: fastapi-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi-app-deployment
  template:
    metadata:
      labels:
        app: fastapi-app-deployment
    spec:
      containers:
      - name: fastapi-app
        image: bezdjian7/fastapi-app:0.0.4
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app-service
spec:
  selector:
    app: fastapi-app-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
