k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-app
spec:
  rules:
  - host: test.com
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: fastapi-app-service
            port:
              number: 80
